# StoryCraft

./: LICENSE  Novel_Workflow_MVP_Design_v0.1.md  README.md  pyproject.toml
docs/development/: CODE_QUALITY.md  COLLABORATION.md  TECH_STACK.md
scripts/: .gitkeep
src/storycraft/: __init__.py
